[project]
name = "ope-record-tobata-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2",
    "openpyxl==3.1",
    "xlrd==2.0",
    "watchdog==4.0",
    "Flask==3.0",
    "waitress==3.0",
    "faker==22.6"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
